--- a/blog.html
+++ b/blog.html
@@ -2,20 +2,17 @@
 <html lang="ja">
 
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript Sample</title>
+  <title>ブログ</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
 
 <body>
-
-
-
   <header>
-    <h1>福岡で笑おう</h1>
+    <h1>ブログ</h1>
+    
     <nav>
       <ul>
           <li><a href="index.html">ホーム</a></li>
@@ -25,24 +22,20 @@
          
         </ul>
       </nav>
+
   </header>
   <main>
-   <!--ここにHTMLを書きます-->
-   <h2>ABOUT</h2>
-   <br>
-   このサイトは、福岡でお笑いライブが楽しめる場所があることをもっとみんなに知ってほしい！という思いで開設しました。
-   <br>
-   福岡でお笑いライブに通う大学生が更新していきます！
-<br>
-
-   
-   
-
-
+   <div id="gallery">
+    <div class="img-item"><img src="images/img01.jpg" alt="number 1"><p>2024.12.14</p></div>
+    <div class="img-item"><img src="images/img02.png" alt="number 2"><p>2024.11.17</p></div>
+    <div class="img-item"><img src="images/img03.png" alt="number 3"><p>2024.10.19</p></div>
+    <div class="img-item"><img src="images/img04.png" alt="number 4"><p>2024.09.16</p></div>
+    <div class="img-item"><img src="images/img05.png" alt="number 5"><p>2024.08.25</p></div>
+    <div class="img-item"><img src="images/img06.png" alt="number 6"><p>2024.07.08</p></div>
+   </div>
   </main>
   <footer>
     <p>&copy; 2025 福岡で笑おう</p>
   </footer>
 </body>
-
 </html>
