--- a/interview.html
+++ b/interview.html
@@ -2,7 +2,6 @@
 <html lang="ja">
 
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript Sample</title>
@@ -11,11 +10,9 @@
 </head>
 
 <body>
-
-
-
   <header>
-    <h1>福岡で笑おう</h1>
+    <h1>インタビュー</h1>
+
     <nav>
       <ul>
           <li><a href="index.html">ホーム</a></li>
@@ -25,23 +22,14 @@
          
         </ul>
       </nav>
+
+
   </header>
   <main>
    <!--ここにHTMLを書きます-->
-   <h2>ABOUT</h2>
-   <br>
-   このサイトは、福岡でお笑いライブが楽しめる場所があることをもっとみんなに知ってほしい！という思いで開設しました。
-   <br>
-   福岡でお笑いライブに通う大学生が更新していきます！
-<br>
-
-   
-   
-
-
   </main>
   <footer>
-    <p>&copy; 2025 福岡で笑おう</p>
+    <p>© SampleSite</p>
   </footer>
 </body>
 
